--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,7 @@ MigrationBackup/
 # Ignore all local history of files
 .history
 .ionide
+
+.DS_Store
+.vscode/launch.json
+.vscode/settings.json
